[package]
name = "ghost_hunter"
version = "0.1.0"
authors = ["gjf2a <ferrer@hendrix.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
#volatile = "0.2.6"
volatile = "0.4.5"
spin = "0.5.2"
x86_64 = "0.14"
uart_16550 = "0.2.0"
pic8259 = "0.10"
pc-keyboard = "0.5"
pluggable_interrupt_os = {git = "https://github.com/gjf2a/pluggable_interrupt_os"}
ghost_hunter_core = {git = "https://github.com/gjf2a/ghost_hunter_core"}

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
