[package]
name = "ghost_hunter"
version = "0.1.0"
authors = ["gjf2a <ferrer@hendrix.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.30"
pc-keyboard = "0.8"
pluggable_interrupt_os = "0.5"
ghost_hunter_core = {git = "https://github.com/gjf2a/ghost_hunter_core"}

[dependencies.crossbeam]
version = "0.8"
default-features = false
